--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,12 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs = -Xmx1G
 
-# Fabric Properties
-	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=23w14a
-	yarn_mappings=23w14a+build.6
-	loader_version=0.14.19
+minecraft_version  = 23w17a
+yarn_mappings      = 23w17a+build.9
+loader_version     = 0.14.19
 
-# Mod Properties
-	mod_version = 1.0-SNAPSHOT
-	maven_group = io.github.jacg311
-	archives_base_name = Obstructum
+mod_version        = 1.0,0
+maven_group        = io.github.jacg311
+archives_base_name = Obstructum
 
-# Dependencies
-	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.78.0+1.20
+fabric_version     = 0.79.2+1.20
