--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,11 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs = -Xmx1G
+org.gradle.jvmargs=-Xmx1G
+minecraft_version=1.20-pre1
+yarn_mappings=1.20-pre1+build.7
+loader_version=0.14.19
 
-minecraft_version  = 23w17a
-yarn_mappings      = 23w17a+build.9
-loader_version     = 0.14.19
+mod_version=1.0.0
+maven_group=io.github.jacg311
+archives_base_name=Obstructum
 
-mod_version        = 1.0,0
-maven_group        = io.github.jacg311
-archives_base_name = Obstructum
-
-fabric_version     = 0.79.2+1.20
+fabric_version=0.80.3+1.20
