--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-minecraft_version=1.20-pre1
-yarn_mappings=1.20-pre1+build.7
-loader_version=0.14.19
+
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.14.22
 
 mod_version=1.0.0
 maven_group=io.github.jacg311
